chore: fix alignment of highlight in edit mode

--- a/botfront/imports/ui/components/example_editor/style.import.less
+++ b/botfront/imports/ui/components/example_editor/style.import.less
@@ -9,6 +9,7 @@
     position: absolute;
     top: 0;
     left: 0;
+    border: 1px transparent solid;
   }
 }
 
